fixed menu not overlapping title

--- a/_sass/_modules/_header.scss
+++ b/_sass/_modules/_header.scss
@@ -1,7 +1,7 @@
 .site-title {
   position: absolute;
   margin-top: 28px;
-  z-index: 9999;
+  z-index: 9998;
   font-weight: 600;
   font-size: 14px;
   color: $dark-text-color;
